--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,6 @@ dependencies:
   - setuptools=65.6.3=py310haa95532_0
   - sqlite=3.41.1=h2bbff1b_0
   - tk=8.6.12=h2bbff1b_0
-  - tzdata=2022g=h04d1e81_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.38.4=py310haa95532_0
@@ -37,6 +36,8 @@ dependencies:
     - click==8.0.3
     - colorama==0.4.6
     - comm==0.1.2
+    - contourpy==1.1.0
+    - cycler==0.11.0
     - db-dtypes==1.0.5
     - debugpy==1.6.6
     - decorator==5.1.1
@@ -46,6 +47,7 @@ dependencies:
     - executing==1.2.0
     - fastavro==1.5.1
     - fastjsonschema==2.16.3
+    - fonttools==4.40.0
     - fqdn==1.5.1
     - google-api-core==1.34.0
     - google-auth==2.16.2
@@ -79,8 +81,12 @@ dependencies:
     - jupyter-server-terminals==0.4.4
     - jupyterlab-pygments==0.2.2
     - jupyterlab-widgets==3.0.5
+    - jupyterthemes==0.20.0
+    - kiwisolver==1.4.4
+    - lesscpy==0.15.1
     - loguru==0.6.0
     - markupsafe==2.1.2
+    - matplotlib==3.7.1
     - matplotlib-inline==0.1.6
     - mistune==2.0.5
     - nbclassic==0.5.3
@@ -94,13 +100,15 @@ dependencies:
     - oauthlib==3.2.2
     - openpyxl==3.1.2
     - packaging==23.0
-    - pandas==1.5.3
+    - pandas==2.0.2
     - pandas-gbq==0.17.9
     - pandavro==1.7.1
     - pandocfilters==1.5.0
     - parso==0.8.3
     - pickleshare==0.7.5
+    - pillow==9.5.0
     - platformdirs==3.1.1
+    - ply==3.11
     - prometheus-client==0.16.0
     - prompt-toolkit==3.0.38
     - proto-plus==1.22.2
@@ -114,6 +122,7 @@ dependencies:
     - pycparser==2.21
     - pydata-google-auth==1.7.0
     - pygments==2.14.0
+    - pyparsing==3.0.9
     - pyrsistent==0.19.3
     - python-dateutil==2.8.2
     - python-json-logger==2.0.7
@@ -145,6 +154,7 @@ dependencies:
     - tornado==6.2
     - tqdm==4.50.2
     - traitlets==5.9.0
+    - tzdata==2023.3
     - uri-template==1.2.0
     - urllib3==1.26.15
     - wcwidth==0.2.6
